--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,13 +24,82 @@
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
 					
+					
+					<% if @book.favorited_by?(current_user) %>
+						<td>
+						  <%= link_to book_favorites_path(@book), method: :delete do %>
+						    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+						    <%= @book.favorites.count %>
+						  <% end %>
+						</td>
+					<% else %>
+						<td>
+						  <%= link_to book_favorites_path(@book), method: :post do %>
+						    <i class="fa fa-heart-o" aria-hidden="true"></i>
+						    <%= @book.favorites.count %> 
+						  <% end %>
+						</td>
+					<% end %>
+					
+					
 					<% if @book.user.id == current_user.id %>
 					  <td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
 					  <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
-					<% end %>  
+					<% end %> 
+					
+					<td>
+						コメント数: <%= @book.book_comments.count %>
+					</td>
 				</tr>
-			</table>
-
+		</table>
+		<table>
+			<% @book.book_comments.each do |book_comment| %>
+		        <tr>
+			        <div class="comment">
+			            <div class="comment-body bb">
+			      	       <td>
+							    <%= link_to user_path(book_comment.user) do %>
+								    <%= attachment_image_tag(book_comment.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
+							        <%= book_comment.user.name %>
+							    <% end %>
+					        </td>
+					        <td>
+			                    </div class="comment-text">
+			                        <%= book_comment.comment %>
+			                    </div>
+			                </td>
+							<td>
+								<% if book_comment.user == current_user %>
+				                    </div class="">
+				                        <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+				                    </div>
+				                <% end %>
+			                </td>
+			            </div>
+			        </div>
+		        </tr>
+			<% end %>
+		</table>
+		<div class="col-xs-9">
+			 
+			<%= form_for [@book, @book_comment] do |f| %>
+			
+			  	<% if @book_comment.errors.any? %>
+					<div id="error_explanation">
+						<ul>
+							<% @book_comment.errors.full_messages.each do |message| %>
+							<li><%= message %></li>
+							<% end %>
+						</ul>
+					</div>
+				<% end %>
+			
+				<span class="col-xs-9">
+			      <%= f.text_area :comment, rows:'5', class: "form-control" %>
+			    </span>
+			  	  <%= f.submit "送信" %>
+			<% end %>
+		</div>
 	</div>
 </div>
 
